--- a/2025/2025-11-16-wir.md
+++ b/2025/2025-11-16-wir.md
@@ -8,7 +8,7 @@
 
 Fans of each asset dispute whose preferred form of money is more fit to replace the mutually detested U.S. dollar as a [store of value](https://www.investopedia.com/terms/s/storeofvalue.asp) and a global financial standard. Bitcoin lays claim to being both limited in supply and digitally native, thus arguably more relevant to a modern, internet-driven economy. By contrast, gold's scarcity stems from its physical tangibility. Plus it has a much longer track record as a monetary asset, going back hundreds of years.
 
-If you spend any time whatsoever talking to bitcoiners and gold bugs, as I have for more than two decades, it also quickly becomes noticeable that the two sides' [criticism of the dollar](https://blog.pmckay.com/posts/20251005-dedollarization.html) is exactly the same — that it's printed ad infinitum by Uncle Sam, thus inevitably devalued over time.
+If you spend any time whatsoever talking to bitcoiners and gold bugs, as I have for more than two decades, it also quickly becomes noticeable that the two sides' [criticism of the dollar](https://blog.pmckay.com/posts/20251005-dedollarization.html) is exactly the same: It's printed ad infinitum by Uncle Sam, thus inevitably devalued over time.
 
 Yet in the mainstream press and on social media alike, we tend to discuss gold and bitcoin in terms of their dollar-denominated prices. What if we were to mathematically compare them directly to one another? Take the figurative and literal common denominator out of the mix and *really* get down to brass tacks.
 
@@ -24,15 +24,17 @@ Some factoids I've noticed so far, along with other recent bitcoin-related news 
 
 - **Since that milestone, the multiple's long-term low is 8.98.** That low was set in January 2023, during  the throes of the crypto market's post-FTX collapse.
 
+![btc-gold chart](https://w3w.news/img/btc-gold-chart.png)
+
 - **In dollar terms, bitcoin has been flagging lately** as traders have unwound riskier market bets due to concerns about the U.S. economy. The token [dipped below $100,000](https://www.morningstar.com/news/dow-jones/2025111313019/coindesk-bitcoin-price-index-lost-339-to-9807607-lowest-4-pm-level-since-may-2025-data-talk) last week for the first time since May.
 
 - **On a more promising note,** the Czech Republic's central bank [just bought](https://www.reuters.com/business/czech-central-bank-buys-1-mln-bitcoin-other-crypto-assets-testing-2025-11-13/)<!-- PM --> $1 million in bitcoin, becoming first global central bank to hold the token. By contrast, there is a looooooong history of central banks owning gold. If bitcoin can continue to elbow its way into this category of demand, that would be a very positive development for the token over the long haul.
 
 **Of course, the burning question** lurking between the lines above is what value the bitcoin-gold multiple might hold as a market signal for investors. I honestly don't know the answer  right now; I'm curious to do more analysis and have other sets of eyes [take a look at the data](https://docs.google.com/spreadsheets/d/1nsYpg7JdbduMge5YJ54BSEfU1EzdGSo5_VU-711tNBI/edit?usp=sharing) as well.
 
-That said, a high multiple should theoretically imply that gold is weak, and a low multiple should mean bitcoin is weak. If you apply that standard as a set of buying signals, the couple of long-term lows and highs I mentioned above would've worked very well in retrospect.
+That said, a high multiple should imply that gold is relatively weak, and a low multiple should mean bitcoin is weak. If you apply that standard as a set of buying signals, the couple of long-term lows and highs I mentioned above would've worked very well in retrospect.
 
-If you had bought bitcoin at 2023's post-FTX low in the multiple, you would've made a 459% return to date. And if you had bought gold at the all-time high multiple in December 2024, that would've returned 53%.
+For example, if you had bought bitcoin at 2023's post-FTX low in the multiple, you would've made a 459% return to date. And if you had bought gold at the all-time high multiple in December 2024, that would've returned 53%.
 
 Hmmmm...
 
