Adding hed + subhead, with help from Copilot

--- a/2025/2025-11-16-wir.md
+++ b/2025/2025-11-16-wir.md
@@ -8,7 +8,7 @@
 
 Fans of each asset dispute whose preferred form of money is more fit to replace the mutually detested U.S. dollar as a [store of value](https://www.investopedia.com/terms/s/storeofvalue.asp) and a global financial standard. Bitcoin lays claim to being both limited in supply and digitally native, thus arguably more relevant to a modern, internet-driven economy. By contrast, gold's scarcity stems from its physical tangibility. Plus it has a much longer track record as a monetary asset, going back hundreds of years.
 
-If you spend any time whatsoever talking to bitcoiners and gold bugs, as I have for more than two decades, it also quickly becomes noticeable that the two sides' [criticism of the dollar](https://blog.pmckay.com/posts/20251005-dedollarization.html) is exactly the same: It's printed ad infinitum by Uncle Sam, thus inevitably devalued over time.
+If you spend any time whatsoever talking to bitcoiners and gold bugs, as I have for more than two decades, it also quickly becomes noticeable that the two sides' criticism of the dollar is exactly the same: It's printed ad infinitum by Uncle Sam, thus inevitably [devalued over time](https://blog.pmckay.com/posts/20251005-dedollarization.html).
 
 Yet in the mainstream press and on social media alike, we tend to discuss gold and bitcoin in terms of their dollar-denominated prices. What if we were to mathematically compare them directly to one another? Take the figurative and literal common denominator out of the mix and *really* get down to brass tacks.
 
