--- a/2025/2025-11-16-wir.md
+++ b/2025/2025-11-16-wir.md
@@ -1,5 +1,6 @@
-# TKTK
-## TKTK
+# Moving a heated market debate beyond dollars
+## Could the BTC-gold multiple be a reliable market signal? Here are the facts, the math, and the caveats.
+
 
 ![A physical bitcoin token surrounded by gold nuggets](https://w3w.news/img/gold1-kanchanara-3000.jpg)
 *Photo by Kanchanara via [Unsplash](https://unsplash.com/@kanchanara)*
