--- a/2025/2025-11-23-wir.md
+++ b/2025/2025-11-23-wir.md
@@ -1,18 +1,77 @@
 # TKTK
 ## TKTK
 
-![Backpacker in the woods staring at a forkin his path](https://w3w.news/img/twopaths-vladislav-babienko-2000.jpg)  
-*Photo by Vladislav Babienko via [Unsplash](https://unsplash.com/@garri)*
+![Child blowing bubbles](https://w3w.news/img/bubbles-andre-hunter-3000.jpg)  
+*Photo by Andre Hunter via [Unsplash](https://unsplash.com/@dre0316)*
 
 **Lead item goes here.** Yadda yadda yadda.
 
+<!-- Keep it to ~300 words!!!!!! -->
+
+- Fortune's Brady gives good advice about the AI bubble: https://view.mail.fortune.com/?qs=449d2dd4ff9848752f05d55c916080d1266543f28e8e7dfaa9bc5a7f642d7247f312d789a1604ca10c6fc78e590efaaec47d11531b6d14eff592b45caa804a5b41494650224aa236eca2cabfb83bc8e7
+
+- Nvidia earnings. <!-- Link TK -->
+
+- **Wall Street Blows Past Bubble Worries to Supercharge AI Spending Frenzy**
+<!--
+* **Summary:** Major reports out this week indicate that financial institutions are continuing to dramatically increase their AI-related spending, driven by a fear of being left behind. Despite concerns from analysts at firms like J.P. Morgan about the long-term return on capital for the AI buildout—which they estimated would require roughly $650 billion in annual revenue—the immediate spending spree on AI infrastructure, talent, and tools is only accelerating across the financial sector and beyond.
+* **Source:** The Wall Street Journal
+* **Link:** [Wall Street Blows Past Bubble Worries to Supercharge AI Spending Frenzy](https://www.google.com/search?q=https://www.wsj.com/pro/articles/wall-street-ai-spending-frenzy-nov-2025-11678888000)
+--> <!-- Google Gemini -->
+
 ### Week in Review: Nov. 16-22, 2025
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- [Bitcoin erases this year’s gains as crypto bear market deepens](https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens) <!-- A reminder of how volatile blockchain/crypto markets remain, and how infrastructure/innovation risk is still very real. ([Bloomberg][5])
+[5]: https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens?utm_source=chatgpt.com "Bitcoin Erases Year's Gain as Crypto Bear Market Deepens" <!-- ChatGPT --> | **BlackRock’s Bitcoin ETF Posts Record-Setting Outflows as Solana Funds Surge** <!--
+      * **Summary:** BlackRock's flagship spot Bitcoin ETF (IBIT) recorded its largest single-day net outflow since its launch, contributing to a negative flow trend totaling nearly $2.2 billion in net redemptions for the fund over the past four weeks. This market-moving development comes amid a broader sell-off that saw Bitcoin prices briefly dip below $90,000. In a stark counter-trend, institutional spot Solana ETFs extended their streak of net inflows to 16 consecutive days, suggesting a major rotation of institutional capital into high-yield altcoin products.
+      * **Source:** The Block
+      * **Link:** [BlackRock's bitcoin ETF posts record-setting outflows worth $523 million](https://www.theblock.co/post/379437/blackrock-bitcoin-etf-record-outflows <!-- Google Gemini --> | Whale investor Gunden unloading a 14-year BTC stash: https://decrypt.co/349447/bitcoin-billionaire-dumps-entire-1-3-billion-btc-stash-14-years-arkham
+
+- [Yield-bearing crypto assets poised to grow after regulatory clarity, report says](https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/) <!--
+— Although this is dated Nov 12, it sets up a theme still driving blockchain adoption: institutional access via regulatory frameworks. ([reuters.com][6])
+[6]: https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/?utm_source=chatgpt.com "Yield-bearing crypto assets poised to grow after regulatory ..." <!-- ChatGPT --> | - **VanEck Selects SOL Strategies to Provide Staking Services for Upcoming Solana ETF** <!-- **Summary:** Institutional interest in Solana continues to materialize as VanEck selected SOL Strategies to provide staking services for the SOL holdings of its forthcoming U.S. spot Solana ETF. The move is significant because it confirms that fund issuers are moving past simple custody to offer yield-generating features to traditional finance clients, further bridging the gap between TradFi and decentralized finance. * **Source:** The Block  **Link:** [SOL Strategies to provide staking services for VanEck's Solana ETF](https://www.theblock.co/post/378985/sol-strategies-staking-vaneck-solana-etf) <!-- Google Gemini -->
+
+- **Anthropic, Microsoft, and NVIDIA Announce Key Strategic Partnerships to Accelerate Enterprise AI**
+<!--
+**Summary:** Anthropic confirmed major strategic announcements this week, including new partnerships with Microsoft and NVIDIA. The news positions Anthropic's Claude models, including the new Sonnet 4.5, for deep integration into Microsoft's enterprise offerings like Microsoft 365 Copilot and Azure AI Foundry. The three-way alignment signals a new phase in the industry where foundation model providers, hyperscalers, and hardware manufacturers solidify their infrastructure alliances to capture the corporate market.
+* **Source:** Anthropic Newsroom (Confirmed by industry reporting in high-quality sources)
+* **Link:** [Microsoft, NVIDIA, and Anthropic announce strategic partnerships](https://www.google.com/search?q=https://www.anthropic.com/news/microsoft-nvidia-anthropic-partnerships) --> <!-- Google Gemini -->
+
+- [Avalanche eyes “Granite” network upgrade to speed up transactions and support mobile/biometric use cases](https://finance.yahoo.com/news/avalanche-blockchain-eyes-upgrade-investors-153930573.html)
+<!--
+— The upgrade is designed to cut settlement times, reduce cross-chain cost, and enable biometric signing. ([Yahoo Finance][4])
+[4]: https://finance.yahoo.com/news/avalanche-blockchain-eyes-upgrade-investors-153930573.html?utm_source=chatgpt.com "Avalanche blockchain eyes new upgrade as investors ..."
+<!-- ChatGPT -->
+
+
+- **UK Announces New Safety Institute with Focus on Frontier Model Development**
+<!--
+      * **Summary:** The United Kingdom announced the formation of a new AI Safety Institute, which will be tasked with auditing and evaluating the world's most advanced frontier AI models. The initiative, following up on commitments made at the Bletchley Park summit, is significant as it sets a global standard for government-led, independent model evaluation, putting safety protocols and responsible AI development at the forefront of international policy.
+      * **Source:** Reuters
+      * **Link:** [UK announces new safety institute with focus on frontier model development](https://www.google.com/search?q=https://www.reuters.com/technology/uk-announces-new-safety-institute-with-focus-on-frontier-model-development-2025-11-19/) <!-- Google Gemini -->
+
+<!--
+
+Some alternative candidates...
+
+
+- **Lawmakers Press CFTC Chair Pick Selig on Digital Asset Oversight and Regulatory Clarity**
+<!--
+* **Summary:** During his Senate hearing, Michael Selig, President Trump's nominee to chair the Commodity Futures Trading Commission (CFTC), was pressed by lawmakers on his vision for digital asset oversight. Selig affirmed the need for "clear, simple guidelines" and consumer protection, while advocating for an end to "regulation by enforcement." His confirmation would place him at the helm of the agency as Congress debates multiple bills that would grant the CFTC greater authority over crypto market structure.
+* **Source:** The Block
+* **Link:** [With major crypto bills pending, lawmakers press CFTC Chair pick Selig on agency independence and digital asset oversight](https://www.theblock.co/post/379565/lawmakers-press-cftc-chair-pick-selig-crypto-rules-agency-independence) <!-- Google Gemini
+
+- [Microsoft and Google LLC to invest more than $16 billion in European AI infrastructure](https://www.wsj.com/tech/ai/microsoft-to-invest-over-10-billion-to-expand-ai-infrastructure-in-portugal-09f6e5c4)
+<!--
+— Microsoft will put more than $10 billion into a new data-centre hub in Sines, Portugal, while Google commits €5.5 billion in Germany. The scale underscores how hyperscalers are continuing to build out AI-infrastructure globally. ([The Wall Street Journal][1])
+[1]: https://www.wsj.com/tech/ai/microsoft-to-invest-over-10-billion-to-expand-ai-infrastructure-in-portugal-09f6e5c4?utm_source=chatgpt.com "Microsoft, Google to Invest Over $16 Billion to Expand AI Infrastructure in Europe" <!-- ChatGPT
+
+- [ScaleOps launches an enterprise AI-infra product that halves GPU costs for on-premises/self-hosted large-language-model deployments](https://venturebeat.com/ai/scaleops-new-ai-infra-product-slashes-gpu-costs-for-self-hosted-enterprise/)
+<!--
+— This is significant because it shows movement beyond the cloud-only model towards more distributed/self-hosted AI infrastructure. ([Venturebeat][3])
+[3]: https://venturebeat.com/ai/scaleops-new-ai-infra-product-slashes-gpu-costs-for-self-hosted-enterprise?utm_source=chatgpt.com "ScaleOps' new AI Infra Product slashes GPU costs for self ..."
+<!-- ChatGPT -->
+
 
 ### Market Snapshot
 
@@ -69,19 +128,26 @@
 
 ### Looking Ahead
 
-- tk ([]())
-- tk ([]())
-- tk ([]())
+- The future of money is here. Be one of the first to experience it. Tune in to the System Update livestream on X on December 17 at 2pm PST. https://www.coinbase.com/events
+
+- [How much of the AI data-centre boom will be powered by renewable energy?](https://techcrunch.com/2025/11/16/how-much-of-the-ai-data-center-boom-will-be-powered-by-renewable-energy/)
+<!--
+— A new report highlights the massive energy and infrastructure demands of AI models and asks whether renewables can keep pace. ([TechCrunch][2])
+[2]: https://techcrunch.com/2025/11/16/how-much-of-the-ai-data-center-boom-will-be-powered-by-renewable-energy/?utm_source=chatgpt.com "How much of the AI data center boom will be powered ..."
+<!-- ChatGPT -->
+
+- Add: https://tinyurl.com/5e2mbhhf Why you should embrace new tech as you age | WaPo n parents hiring 'screen coaches.' https://www.washingtonpost.com/technology/2025/11/17/kids-parents-tech-help/
 
 ### Odds & Ends
 
-- tk ([]())
-- tk ([]())
+- **Based on an analysis of Spotify data,** researchers from the University of Southern California say the podcasting industry exhibits gender and racial inequalities far greater than what they saw doing similar work in movies, TV, and music. ([NPR](https://www.npr.org/2025/11/11/nx-s1-5605983/bros-really-are-dominating-podcasting))
+
+- **There are more private-equity funds** in America [than McDonald's locations](https://x.com/icapitalnetwork/status/1991264189105483828), according to fintech platform iCapital. Wow.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
 _**Please note, I regularly use several AI apps to assist production of w3w. But the final edit is 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub.**_
 
-_**If you need to reach me directly, please email peter[at]w3w[dot]media.**_
+_**If you need to reach me directly, please email peter[at]pmckay[dot]com.**_
 
 _**Best wishes for a healthy and productive week ahead.**_ 😊
