--- a/2025/2025-11-23-wir.md
+++ b/2025/2025-11-23-wir.md
@@ -4,14 +4,42 @@
 ![Child blowing bubbles](https://w3w.news/img/bubbles-andre-hunter-3000.jpg)  
 *Photo by Andre Hunter via [Unsplash](https://unsplash.com/@dre0316)*
 
-**Lead item goes here.** Yadda yadda yadda.
+<hr>
 
-<!-- Keep it to ~300 words!!!!!! -->
+*Some housekeeping notes before we get to the news today:*
+
+- _**In recognition of next week's Thanksgiving holiday in the U.S.,** w3w is going to take a week off. We'll return to our regular Sunday publication cadence Dec. 7._
+
+- _**A big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
+
+<hr>
+
+**We've moved from a murmur of misgivings** about whether AI is in a bubble to a roar.
+
+<!-- Keep lead item to ~300 words!!!!!! -->
+
+- The tech sector is experiencing a sharp decline, with AI stocks taking a hit due to concerns that the market has become overvalued. Nvidia's strong earnings call failed to convince traders that the AI bubble is sustainable, leading to a sell-off in tech stocks, including AI infrastructure companies and cryptocurrency-related stocks.
+https://fortune.com/2025/11/21/stocks-wall-street-bitcoin-price-ai-bubbly-on-ice/
 
 - Fortune's Brady gives good advice about the AI bubble: https://view.mail.fortune.com/?qs=449d2dd4ff9848752f05d55c916080d1266543f28e8e7dfaa9bc5a7f642d7247f312d789a1604ca10c6fc78e590efaaec47d11531b6d14eff592b45caa804a5b41494650224aa236eca2cabfb83bc8e7
 
+- Meta Platforms is raising up to $30 billion in its largest bond offering to fund the expansion of its artificial intelligence infrastructure, amid a period of intense investments in AI that are creating significant cost pressures. The company is also investing heavily to attract and retain top AI researchers and engineers, with employee compensation costs expected to be the second-largest contributor to the increase in costs next year. https://www.reuters.com/business/meta-seeks-least-25-billion-bond-offering-bloomberg-reports-2025-10-30/
+
+- **Global spending on data centers** is expected to top $580 billion this year, about $40 billion greater than outlays for oil and gas exploration. ([TechCrunch](https://techcrunch.com/2025/11/12/data-centers-now-attract-more-investment-than-finding-new-oil-supplies/))
+
+<!--
+
 - Nvidia earnings. <!-- Link TK -->
 
+<!--
+- Market bloodbath has pushed BTC into negative territory for the year: https://www.cnbc.com/2025/11/21/bitcoin-continues-slide-thats-roiling-markets-threatens-to-break-below-80000.html | https://www.theblock.co/post/379862/bitcoin-plunges-below-86000
+<!--
+- [Bitcoin erases this year’s gains as crypto bear market deepens](https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens) <!-- A reminder of how volatile blockchain/crypto markets remain, and how infrastructure/innovation risk is still very real. ([Bloomberg][5])
+[5]: https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens?utm_source=chatgpt.com "Bitcoin Erases Year's Gain as Crypto Bear Market Deepens" <!-- ChatGPT  | **BlackRock’s Bitcoin ETF Posts Record-Setting Outflows as Solana Funds Surge** <!--
+      * **Summary:** BlackRock's flagship spot Bitcoin ETF (IBIT) recorded its largest single-day net outflow since its launch, contributing to a negative flow trend totaling nearly $2.2 billion in net redemptions for the fund over the past four weeks. This market-moving development comes amid a broader sell-off that saw Bitcoin prices briefly dip below $90,000. In a stark counter-trend, institutional spot Solana ETFs extended their streak of net inflows to 16 consecutive days, suggesting a major rotation of institutional capital into high-yield altcoin products.
+      * **Source:** The Block
+      * **Link:** [BlackRock's bitcoin ETF posts record-setting outflows worth $523 million](https://www.theblock.co/post/379437/blackrock-bitcoin-etf-record-outflows <!-- Google Gemini  | Whale investor Gunden unloading a 14-year BTC stash: https://decrypt.co/349447/bitcoin-billionaire-dumps-entire-1-3-billion-btc-stash-14-years-arkham -->
+<!--
 - **Wall Street Blows Past Bubble Worries to Supercharge AI Spending Frenzy**
 <!--
 * **Summary:** Major reports out this week indicate that financial institutions are continuing to dramatically increase their AI-related spending, driven by a fear of being left behind. Despite concerns from analysts at firms like J.P. Morgan about the long-term return on capital for the AI buildout—which they estimated would require roughly $650 billion in annual revenue—the immediate spending spree on AI infrastructure, talent, and tools is only accelerating across the financial sector and beyond.
@@ -21,15 +49,20 @@
 
 ### Week in Review: Nov. 16-22, 2025
 
-- [Bitcoin erases this year’s gains as crypto bear market deepens](https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens) <!-- A reminder of how volatile blockchain/crypto markets remain, and how infrastructure/innovation risk is still very real. ([Bloomberg][5])
-[5]: https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens?utm_source=chatgpt.com "Bitcoin Erases Year's Gain as Crypto Bear Market Deepens" <!-- ChatGPT --> | **BlackRock’s Bitcoin ETF Posts Record-Setting Outflows as Solana Funds Surge** <!--
-      * **Summary:** BlackRock's flagship spot Bitcoin ETF (IBIT) recorded its largest single-day net outflow since its launch, contributing to a negative flow trend totaling nearly $2.2 billion in net redemptions for the fund over the past four weeks. This market-moving development comes amid a broader sell-off that saw Bitcoin prices briefly dip below $90,000. In a stark counter-trend, institutional spot Solana ETFs extended their streak of net inflows to 16 consecutive days, suggesting a major rotation of institutional capital into high-yield altcoin products.
-      * **Source:** The Block
-      * **Link:** [BlackRock's bitcoin ETF posts record-setting outflows worth $523 million](https://www.theblock.co/post/379437/blackrock-bitcoin-etf-record-outflows <!-- Google Gemini --> | Whale investor Gunden unloading a 14-year BTC stash: https://decrypt.co/349447/bitcoin-billionaire-dumps-entire-1-3-billion-btc-stash-14-years-arkham
+- **Bitcoin is on track for its worst month since 2022, with a 33% decline from its all-time high, as a combination of selling pressures and negative catalysts continue to weigh on the crypto market.** The market is experiencing a wave of margin calls, with analysts warning that a break below $82,000 could confirm a bearish trend, and uncertainty around interest rate cuts is adding to the uncertainty. https://www.businessinsider.com/bitcoin-price-why-is-crypto-down-btc-margin-calls-fed-2025-11
 
+- The crypto market has taken a significant hit, with over $1 trillion in value erased since early October, as Bitcoin and other risk assets continue to plummet due to a combination of technical and macro pressures. The market remains fragile, with some analysts predicting a possible local bottom, but others warn of further declines if buyers don't step in decisively. https://www.businessinsider.com/crypto-market-meltdown-erased-1-trillion-bitcoin-btc-digital-assets-2025-11
+
+- The cryptocurrency market has taken a significant hit, with Bitcoin losing over 10% of its value in 24 hours and plummeting to its lowest levels since April. This sell-off has left the entire market reeling, sparking renewed debate about the long-term viability of cryptocurrency as an asset. https://www.axios.com/2025/11/21/bitcoin-value-price-crypto-coin-sell-off
+
+- Tom Lee, a well-known expert at Fundstrat, believes that cryptocurrency prices can serve as a leading indicator for U.S. stock market trends. This perspective highlights the potential connections between the two often-separate markets. https://www.cnbc.com/2025/11/20/fundstrats-tom-lee-says-crypto-is-a-leading-indicator-for-us-stock-prices.html
+
+- According to a recent report from JPMorgan, the current crypto market correction is largely driven by retail investors selling spot bitcoin and ether ETFs, with around $4 billion pulled from these investments in November. This selling behavior stands in contrast to strong equity buying, suggesting that retail investors still treat crypto and equities as separate risk assets. https://www.theblock.co/post/379840/jpmorgan-crypto-market-correction-retail-selling-bitcoin-ether-etfs
+
+<!--
 - [Yield-bearing crypto assets poised to grow after regulatory clarity, report says](https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/) <!--
 — Although this is dated Nov 12, it sets up a theme still driving blockchain adoption: institutional access via regulatory frameworks. ([reuters.com][6])
-[6]: https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/?utm_source=chatgpt.com "Yield-bearing crypto assets poised to grow after regulatory ..." <!-- ChatGPT --> | - **VanEck Selects SOL Strategies to Provide Staking Services for Upcoming Solana ETF** <!-- **Summary:** Institutional interest in Solana continues to materialize as VanEck selected SOL Strategies to provide staking services for the SOL holdings of its forthcoming U.S. spot Solana ETF. The move is significant because it confirms that fund issuers are moving past simple custody to offer yield-generating features to traditional finance clients, further bridging the gap between TradFi and decentralized finance. * **Source:** The Block  **Link:** [SOL Strategies to provide staking services for VanEck's Solana ETF](https://www.theblock.co/post/378985/sol-strategies-staking-vaneck-solana-etf) <!-- Google Gemini -->
+[6]: https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/?utm_source=chatgpt.com "Yield-bearing crypto assets poised to grow after regulatory ..." <!-- ChatGPT --> <!--|<!-- - **VanEck Selects SOL Strategies to Provide Staking Services for Upcoming Solana ETF** <!-- **Summary:** Institutional interest in Solana continues to materialize as VanEck selected SOL Strategies to provide staking services for the SOL holdings of its forthcoming U.S. spot Solana ETF. The move is significant because it confirms that fund issuers are moving past simple custody to offer yield-generating features to traditional finance clients, further bridging the gap between TradFi and decentralized finance. * **Source:** The Block  **Link:** [SOL Strategies to provide staking services for VanEck's Solana ETF](https://www.theblock.co/post/378985/sol-strategies-staking-vaneck-solana-etf) <!-- Google Gemini -->
 
 - **Anthropic, Microsoft, and NVIDIA Announce Key Strategic Partnerships to Accelerate Enterprise AI**
 <!--
@@ -50,16 +83,20 @@
       * **Source:** Reuters
       * **Link:** [UK announces new safety institute with focus on frontier model development](https://www.google.com/search?q=https://www.reuters.com/technology/uk-announces-new-safety-institute-with-focus-on-frontier-model-development-2025-11-19/) <!-- Google Gemini -->
 
+- **Washington Watch:** New CFTC chair | Bill to allow BTC tax payments...
+
+<!--
+Lawmakers Press CFTC Chair Pick Selig on Digital Asset Oversight and Regulatory Clarity**
+      <!--
+      * **Summary:** During his Senate hearing, Michael Selig, President Trump's nominee to chair the Commodity Futures Trading Commission (CFTC), was pressed by lawmakers on his vision for digital asset oversight. Selig affirmed the need for "clear, simple guidelines" and consumer protection, while advocating for an end to "regulation by enforcement." His confirmation would place him at the helm of the agency as Congress debates multiple bills that would grant the CFTC greater authority over crypto market structure.
+      * **Source:** The Block
+      * **Link:** [With major crypto bills pending, lawmakers press CFTC Chair pick Selig on agency independence and digital asset oversight](https://www.theblock.co/post/379565/lawmakers-press-cftc-chair-pick-selig-crypto-rules-agency-independence) <!-- Google Gemini
+
 <!--
 
 Some alternative candidates...
 
 
-- **Lawmakers Press CFTC Chair Pick Selig on Digital Asset Oversight and Regulatory Clarity**
-<!--
-* **Summary:** During his Senate hearing, Michael Selig, President Trump's nominee to chair the Commodity Futures Trading Commission (CFTC), was pressed by lawmakers on his vision for digital asset oversight. Selig affirmed the need for "clear, simple guidelines" and consumer protection, while advocating for an end to "regulation by enforcement." His confirmation would place him at the helm of the agency as Congress debates multiple bills that would grant the CFTC greater authority over crypto market structure.
-* **Source:** The Block
-* **Link:** [With major crypto bills pending, lawmakers press CFTC Chair pick Selig on agency independence and digital asset oversight](https://www.theblock.co/post/379565/lawmakers-press-cftc-chair-pick-selig-crypto-rules-agency-independence) <!-- Google Gemini
 
 - [Microsoft and Google LLC to invest more than $16 billion in European AI infrastructure](https://www.wsj.com/tech/ai/microsoft-to-invest-over-10-billion-to-expand-ai-infrastructure-in-portugal-09f6e5c4)
 <!--
@@ -128,21 +165,17 @@ Some alternative candidates...
 
 ### Looking Ahead
 
-- The future of money is here. Be one of the first to experience it. Tune in to the System Update livestream on X on December 17 at 2pm PST. https://www.coinbase.com/events
+- **Coinbase announced** it will [do a livestream](https://www.coinbase.com/events) on the company's [official Twitter/X](https://x.com/coinbase) feed Dec. 17, dubbed System Update. Between the lines, it seems likely they will be announcing some new products and/or initiatives. Event starts 2 p.m. Pacific Standard Time
 
-- [How much of the AI data-centre boom will be powered by renewable energy?](https://techcrunch.com/2025/11/16/how-much-of-the-ai-data-center-boom-will-be-powered-by-renewable-energy/)
-<!--
-— A new report highlights the massive energy and infrastructure demands of AI models and asks whether renewables can keep pace. ([TechCrunch][2])
-[2]: https://techcrunch.com/2025/11/16/how-much-of-the-ai-data-center-boom-will-be-powered-by-renewable-energy/?utm_source=chatgpt.com "How much of the AI data center boom will be powered ..."
-<!-- ChatGPT -->
-
-- Add: https://tinyurl.com/5e2mbhhf Why you should embrace new tech as you age | WaPo n parents hiring 'screen coaches.' https://www.washingtonpost.com/technology/2025/11/17/kids-parents-tech-help/
-
-### Odds & Ends
+- **The tech user's lifecycle:** The Washington Post reports that some desperate parents now spend [$8,000 per summer](https://wapo.st/3X9Q3mM) on phone-free "detox camps" for their kids, to mitigate the harms of excessive screen time. On the other hand, the Post also just ran a story on the [benefits of tech usage](https://wapo.st/4rd9okx) for preventing age-related "brain rot" among older users. Go figure.
 
 - **Based on an analysis of Spotify data,** researchers from the University of Southern California say the podcasting industry exhibits gender and racial inequalities far greater than what they saw doing similar work in movies, TV, and music. ([NPR](https://www.npr.org/2025/11/11/nx-s1-5605983/bros-really-are-dominating-podcasting))
 
-- **There are more private-equity funds** in America [than McDonald's locations](https://x.com/icapitalnetwork/status/1991264189105483828), according to fintech platform iCapital. Wow.
+### Odds & Ends
+
+- **There are now more private-equity funds** in America than McDonald's locations, according to fintech platform [iCapital](https://x.com/icapitalnetwork/status/1991264189105483828). Wow.
+
+- **A New Jersey animal shelter** just returned Asa, a local family's housecat that had been missing for a decade, using a microchip [implanted long ago](https://www.youtube.com/watch?v=_DFrwLiw-ZU). 🐱
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
