--- a/2025/2025-11-23-wir.md
+++ b/2025/2025-11-23-wir.md
@@ -14,101 +14,43 @@
 
 <hr>
 
-**We've moved from a murmur of misgivings** about whether AI is in a bubble to a roar.
-
 <!-- Keep lead item to ~300 words!!!!!! -->
 
-- The tech sector is experiencing a sharp decline, with AI stocks taking a hit due to concerns that the market has become overvalued. Nvidia's strong earnings call failed to convince traders that the AI bubble is sustainable, leading to a sell-off in tech stocks, including AI infrastructure companies and cryptocurrency-related stocks.
-https://fortune.com/2025/11/21/stocks-wall-street-bitcoin-price-ai-bubbly-on-ice/
+**The murmers on Wall Street** that AI could be in an unsustainable bubble have suddenly turned to a roar.
 
-- Fortune's Brady gives good advice about the AI bubble: https://view.mail.fortune.com/?qs=449d2dd4ff9848752f05d55c916080d1266543f28e8e7dfaa9bc5a7f642d7247f312d789a1604ca10c6fc78e590efaaec47d11531b6d14eff592b45caa804a5b41494650224aa236eca2cabfb83bc8e7
+Even Nvidia's highly anticipated earnings report Wednesday, which showed [record quarterly revenue](https://www.wsj.com/tech/ai/nvidia-earnings-q3-2025-nvda-stock-9c6a40fe?st=fTPA6f&reflink=desktopwebshare_permalink) driven by sales of its AI chips, couldn't really ease everyone's fears. The S&P 500 fell nearly 2% for the week and is off 3.5% this month. Meanwhile, the more tech-oriented Nasdaq Composite has slid 6% in November.
 
-- Meta Platforms is raising up to $30 billion in its largest bond offering to fund the expansion of its artificial intelligence infrastructure, amid a period of intense investments in AI that are creating significant cost pressures. The company is also investing heavily to attract and retain top AI researchers and engineers, with employee compensation costs expected to be the second-largest contributor to the increase in costs next year. https://www.reuters.com/business/meta-seeks-least-25-billion-bond-offering-bloomberg-reports-2025-10-30/
+In such a "wild week," as my old Wall Street Journal colleague Greg Zuckerman [described it](https://www.wsj.com/finance/stocks/a-wild-week-in-markets-leaves-wall-street-bracing-for-more-99ec20a6?st=TfjnBf&reflink=desktopwebshare_permalink), it always helps to step back and view the bigger picture.
 
-- **Global spending on data centers** is expected to top $580 billion this year, about $40 billion greater than outlays for oil and gas exploration. ([TechCrunch](https://techcrunch.com/2025/11/12/data-centers-now-attract-more-investment-than-finding-new-oil-supplies/))
+Fortune's Dian Brady offered some useful long-term perspective in [her newsletter](https://view.mail.fortune.com/?qs=449d2dd4ff9848752f05d55c916080d1266543f28e8e7dfaa9bc5a7f642d7247f312d789a1604ca10c6fc78e590efaaec47d11531b6d14eff592b45caa804a5b41494650224aa236eca2cabfb83bc8e7):
 
-<!--
+>*"...All would be wise to remember that the AI bubble is a financial phenomenon, not a technological one. The assumption that they go together could be an expensive mistake.*
+>
+>*"We’ve seen it before. When the internet bubble popped in 2000—the S&P plunged 49% in 31 months—many people concluded, 'You see? That internet thing was a big nothing.' Obviously they were wrong. The market had a seizure. Companies that were flimsily financed failed. But the technology continued to change the world."*
 
-- Nvidia earnings. <!-- Link TK -->
+One useful illustration of AI's mixed bag right now: tech companies' frenzied spending to build infrastructure for compute-intensive AI applications.
 
-<!--
-- Market bloodbath has pushed BTC into negative territory for the year: https://www.cnbc.com/2025/11/21/bitcoin-continues-slide-thats-roiling-markets-threatens-to-break-below-80000.html | https://www.theblock.co/post/379862/bitcoin-plunges-below-86000
-<!--
-- [Bitcoin erases this year’s gains as crypto bear market deepens](https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens) <!-- A reminder of how volatile blockchain/crypto markets remain, and how infrastructure/innovation risk is still very real. ([Bloomberg][5])
-[5]: https://www.bloomberg.com/news/articles/2025-11-16/bitcoin-erases-this-year-s-gain-as-crypto-bear-market-deepens?utm_source=chatgpt.com "Bitcoin Erases Year's Gain as Crypto Bear Market Deepens" <!-- ChatGPT  | **BlackRock’s Bitcoin ETF Posts Record-Setting Outflows as Solana Funds Surge** <!--
-      * **Summary:** BlackRock's flagship spot Bitcoin ETF (IBIT) recorded its largest single-day net outflow since its launch, contributing to a negative flow trend totaling nearly $2.2 billion in net redemptions for the fund over the past four weeks. This market-moving development comes amid a broader sell-off that saw Bitcoin prices briefly dip below $90,000. In a stark counter-trend, institutional spot Solana ETFs extended their streak of net inflows to 16 consecutive days, suggesting a major rotation of institutional capital into high-yield altcoin products.
-      * **Source:** The Block
-      * **Link:** [BlackRock's bitcoin ETF posts record-setting outflows worth $523 million](https://www.theblock.co/post/379437/blackrock-bitcoin-etf-record-outflows <!-- Google Gemini  | Whale investor Gunden unloading a 14-year BTC stash: https://decrypt.co/349447/bitcoin-billionaire-dumps-entire-1-3-billion-btc-stash-14-years-arkham -->
-<!--
-- **Wall Street Blows Past Bubble Worries to Supercharge AI Spending Frenzy**
-<!--
-* **Summary:** Major reports out this week indicate that financial institutions are continuing to dramatically increase their AI-related spending, driven by a fear of being left behind. Despite concerns from analysts at firms like J.P. Morgan about the long-term return on capital for the AI buildout—which they estimated would require roughly $650 billion in annual revenue—the immediate spending spree on AI infrastructure, talent, and tools is only accelerating across the financial sector and beyond.
-* **Source:** The Wall Street Journal
-* **Link:** [Wall Street Blows Past Bubble Worries to Supercharge AI Spending Frenzy](https://www.google.com/search?q=https://www.wsj.com/pro/articles/wall-street-ai-spending-frenzy-nov-2025-11678888000)
---> <!-- Google Gemini -->
+At face value, the outlays are indisputably enormous, expcted to top $580 billion this year. That's about $40 billion greater than the expected spending globally on oil and gas exploration, according to [TechCrunch](https://techcrunch.com/2025/11/12/data-centers-now-attract-more-investment-than-finding-new-oil-supplies/).
+
+On the other hand, a lot of the AI spending is increasingly being [scrutinized by analysts](https://am.jpmorgan.com/us/en/asset-management/adv/insights/market-insights/market-updates/on-the-minds-of-investors/does-circularity-in-ai-deals-warn-of-a-bubble/) as "circular." In other words, it flows from one company whose share price has already been inflated by great AI-related expectations to another, carrying a similar "AI premium," because it sells chips or cloud services or another relevant input.
+
+Strictly speaking, only one company in that equation has new revenue to speak of. The other has a new *cost* of equal size. Where is the overall value being created?
+
+That's the thornier question markets are sorting out right now. Expect the process to take awhile longer.
 
 ### Week in Review: Nov. 16-22, 2025
 
-- **Bitcoin is on track for its worst month since 2022, with a 33% decline from its all-time high, as a combination of selling pressures and negative catalysts continue to weigh on the crypto market.** The market is experiencing a wave of margin calls, with analysts warning that a break below $82,000 could confirm a bearish trend, and uncertainty around interest rate cuts is adding to the uncertainty. https://www.businessinsider.com/bitcoin-price-why-is-crypto-down-btc-margin-calls-fed-2025-11
+The week's bloodbath took a heavy toll on crypto prices as well, as investors' appetite for all sorts of speculative assets drew close to nil:
 
-- The crypto market has taken a significant hit, with over $1 trillion in value erased since early October, as Bitcoin and other risk assets continue to plummet due to a combination of technical and macro pressures. The market remains fragile, with some analysts predicting a possible local bottom, but others warn of further declines if buyers don't step in decisively. https://www.businessinsider.com/crypto-market-meltdown-erased-1-trillion-bitcoin-btc-digital-assets-2025-11
+- **Bitcoin fell** to a [seven-month low](https://www.reuters.com/business/finance/cryptocurrencies-whipped-by-flight-risk-2025-11-21/) and is now on track for its [worst month since 2022](https://www.businessinsider.com/bitcoin-price-why-is-crypto-down-btc-margin-calls-fed-2025-11), off 33% from its all-time high above $126,000.
 
-- The cryptocurrency market has taken a significant hit, with Bitcoin losing over 10% of its value in 24 hours and plummeting to its lowest levels since April. This sell-off has left the entire market reeling, sparking renewed debate about the long-term viability of cryptocurrency as an asset. https://www.axios.com/2025/11/21/bitcoin-value-price-crypto-coin-sell-off
+- **Since early October,** the broader token market has [shed over $1 trillion](https://www.businessinsider.com/crypto-market-meltdown-erased-1-trillion-bitcoin-btc-digital-assets-2025-11) in value, including [$400 billion lost](https://www.axios.com/2025/11/21/bitcoin-value-price-crypto-coin-sell-off) last week alone. Going into Monday, crypto's global market capitalization is hovering just below $3 trillion, according to [CoinMarketCap](https://coinmarketcap.com/charts/).
 
-- Tom Lee, a well-known expert at Fundstrat, believes that cryptocurrency prices can serve as a leading indicator for U.S. stock market trends. This perspective highlights the potential connections between the two often-separate markets. https://www.cnbc.com/2025/11/20/fundstrats-tom-lee-says-crypto-is-a-leading-indicator-for-us-stock-prices.html
+- **JPMorgan analysts said in a new report** that the recent crypto market correction has been largely driven by retail investors selling U.S.-listed bitcoin and ether funds, with around $4 billion pulled from such investments in November so far. ([The Block](https://www.theblock.co/post/379840/jpmorgan-crypto-market-correction-retail-selling-bitcoin-ether-etfs))
 
-- According to a recent report from JPMorgan, the current crypto market correction is largely driven by retail investors selling spot bitcoin and ether ETFs, with around $4 billion pulled from these investments in November. This selling behavior stands in contrast to strong equity buying, suggesting that retail investors still treat crypto and equities as separate risk assets. https://www.theblock.co/post/379840/jpmorgan-crypto-market-correction-retail-selling-bitcoin-ether-etfs
+- **Tom Lee, chairman of ether treasury company BitMine,** says crypto's recent weakness may also stem from lingering liquidity issues among market makers on Wall Street since they lost $20 billion collectively in one day on Oct. 10. ([TradingView](https://www.tradingview.com/news/cointelegraph:ab7dc8dae094b:0-tom-lee-speculates-wounded-market-makers-behind-crypto-crunch/))
 
-<!--
-- [Yield-bearing crypto assets poised to grow after regulatory clarity, report says](https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/) <!--
-— Although this is dated Nov 12, it sets up a theme still driving blockchain adoption: institutional access via regulatory frameworks. ([reuters.com][6])
-[6]: https://www.reuters.com/technology/yield-bearing-crypto-assets-poised-grow-after-regulatory-clarity-report-says-2025-11-12/?utm_source=chatgpt.com "Yield-bearing crypto assets poised to grow after regulatory ..." <!-- ChatGPT --> <!--|<!-- - **VanEck Selects SOL Strategies to Provide Staking Services for Upcoming Solana ETF** <!-- **Summary:** Institutional interest in Solana continues to materialize as VanEck selected SOL Strategies to provide staking services for the SOL holdings of its forthcoming U.S. spot Solana ETF. The move is significant because it confirms that fund issuers are moving past simple custody to offer yield-generating features to traditional finance clients, further bridging the gap between TradFi and decentralized finance. * **Source:** The Block  **Link:** [SOL Strategies to provide staking services for VanEck's Solana ETF](https://www.theblock.co/post/378985/sol-strategies-staking-vaneck-solana-etf) <!-- Google Gemini -->
-
-- **Anthropic, Microsoft, and NVIDIA Announce Key Strategic Partnerships to Accelerate Enterprise AI**
-<!--
-**Summary:** Anthropic confirmed major strategic announcements this week, including new partnerships with Microsoft and NVIDIA. The news positions Anthropic's Claude models, including the new Sonnet 4.5, for deep integration into Microsoft's enterprise offerings like Microsoft 365 Copilot and Azure AI Foundry. The three-way alignment signals a new phase in the industry where foundation model providers, hyperscalers, and hardware manufacturers solidify their infrastructure alliances to capture the corporate market.
-* **Source:** Anthropic Newsroom (Confirmed by industry reporting in high-quality sources)
-* **Link:** [Microsoft, NVIDIA, and Anthropic announce strategic partnerships](https://www.google.com/search?q=https://www.anthropic.com/news/microsoft-nvidia-anthropic-partnerships) --> <!-- Google Gemini -->
-
-- [Avalanche eyes “Granite” network upgrade to speed up transactions and support mobile/biometric use cases](https://finance.yahoo.com/news/avalanche-blockchain-eyes-upgrade-investors-153930573.html)
-<!--
-— The upgrade is designed to cut settlement times, reduce cross-chain cost, and enable biometric signing. ([Yahoo Finance][4])
-[4]: https://finance.yahoo.com/news/avalanche-blockchain-eyes-upgrade-investors-153930573.html?utm_source=chatgpt.com "Avalanche blockchain eyes new upgrade as investors ..."
-<!-- ChatGPT -->
-
-
-- **UK Announces New Safety Institute with Focus on Frontier Model Development**
-<!--
-      * **Summary:** The United Kingdom announced the formation of a new AI Safety Institute, which will be tasked with auditing and evaluating the world's most advanced frontier AI models. The initiative, following up on commitments made at the Bletchley Park summit, is significant as it sets a global standard for government-led, independent model evaluation, putting safety protocols and responsible AI development at the forefront of international policy.
-      * **Source:** Reuters
-      * **Link:** [UK announces new safety institute with focus on frontier model development](https://www.google.com/search?q=https://www.reuters.com/technology/uk-announces-new-safety-institute-with-focus-on-frontier-model-development-2025-11-19/) <!-- Google Gemini -->
-
-- **Washington Watch:** New CFTC chair | Bill to allow BTC tax payments...
-
-<!--
-Lawmakers Press CFTC Chair Pick Selig on Digital Asset Oversight and Regulatory Clarity**
-      <!--
-      * **Summary:** During his Senate hearing, Michael Selig, President Trump's nominee to chair the Commodity Futures Trading Commission (CFTC), was pressed by lawmakers on his vision for digital asset oversight. Selig affirmed the need for "clear, simple guidelines" and consumer protection, while advocating for an end to "regulation by enforcement." His confirmation would place him at the helm of the agency as Congress debates multiple bills that would grant the CFTC greater authority over crypto market structure.
-      * **Source:** The Block
-      * **Link:** [With major crypto bills pending, lawmakers press CFTC Chair pick Selig on agency independence and digital asset oversight](https://www.theblock.co/post/379565/lawmakers-press-cftc-chair-pick-selig-crypto-rules-agency-independence) <!-- Google Gemini
-
-<!--
-
-Some alternative candidates...
-
-
-
-- [Microsoft and Google LLC to invest more than $16 billion in European AI infrastructure](https://www.wsj.com/tech/ai/microsoft-to-invest-over-10-billion-to-expand-ai-infrastructure-in-portugal-09f6e5c4)
-<!--
-— Microsoft will put more than $10 billion into a new data-centre hub in Sines, Portugal, while Google commits €5.5 billion in Germany. The scale underscores how hyperscalers are continuing to build out AI-infrastructure globally. ([The Wall Street Journal][1])
-[1]: https://www.wsj.com/tech/ai/microsoft-to-invest-over-10-billion-to-expand-ai-infrastructure-in-portugal-09f6e5c4?utm_source=chatgpt.com "Microsoft, Google to Invest Over $16 Billion to Expand AI Infrastructure in Europe" <!-- ChatGPT
-
-- [ScaleOps launches an enterprise AI-infra product that halves GPU costs for on-premises/self-hosted large-language-model deployments](https://venturebeat.com/ai/scaleops-new-ai-infra-product-slashes-gpu-costs-for-self-hosted-enterprise/)
-<!--
-— This is significant because it shows movement beyond the cloud-only model towards more distributed/self-hosted AI infrastructure. ([Venturebeat][3])
-[3]: https://venturebeat.com/ai/scaleops-new-ai-infra-product-slashes-gpu-costs-for-self-hosted-enterprise?utm_source=chatgpt.com "ScaleOps' new AI Infra Product slashes GPU costs for self ..."
-<!-- ChatGPT -->
-
+- **Some market pundits and press** have been expressing [great surprise](https://www.economist.com/finance-and-economics/2025/11/18/crypto-got-everything-it-wanted-now-its-sinking) that crypto is plunging despite all the regulatory relief the industry has gotten from the Trump administration this year. For the record, yours truly has been wary [since the beginning](https://peteramckay.medium.com/is-this-your-crypto-president-america-8d33875a7940) of Trump II that he could create [unexpected downsides](https://blog.pmckay.com/posts/20250907-Trumps-mixed-effects-on-crypto.html). But hey... The regulatory rollback continues regardless. The administration's nomination of an industry-friendly chair for the Commodity Futures Trading Commission is [moving forward](https://www.reuters.com/world/us/senate-grill-trumps-pick-cftc-head-crypto-regulation-2025-11-19/) in the Senate. And House members are weighing a new proposal to allow [tax payments in bitcoin](https://www.msn.com/en-us/politics/government/bitcoin-for-taxes-proposed-bill-would-let-americans-pay-the-irs-in-btc/ar-AA1QQ4e7).
 
 ### Market Snapshot
 
@@ -126,39 +68,39 @@ Some alternative candidates...
   <tbody>
     <tr>
       <td><a href="https://coinmarketcap.com/currencies/bitcoin/">Bitcoin</a></td>
-      <td>$</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$84,422.32</td>
+      <td>-10.9%</td>
+      <td>-10.0%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/GC%3DF?p=GC%253DF">Gold</a></td>
-      <td>$</td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>$4,079.50</td>
+      <td>-0.1%</td>
+      <td>+55.2%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/DX-Y.NYB?p=DX-Y.NYB&.tsrc=fin-srch">USD Index</a></td>
-      <td></td>
-      <td>-%</td>
-      <td>-%</td>
+      <td>100.2</td>
+      <td>+0.9%</td>
+      <td>-7.6%</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ETNX/">10-yr U.S. <br>Treasury Yield</a></td>
-      <td>%</td>
-      <td>-</td>
-      <td>-</td>
+      <td>4.063%</td>
+      <td>-0.085</td>
+      <td>-0.510</td>
     </tr>
     <tr>
       <td><a href="https://finance.yahoo.com/quote/%5ENDX/components?p=%255ENDX">Nasdaq 100</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>24,239.57</td>
+      <td>-3.1%</td>
+      <td>+15.4%</td>
     </tr>
     <tr>
       <td><a href="https://www.msci.com/indexes/index/899901">MSCI All-Country <br>World Index (ex US)</a></td>
-      <td></td>
-      <td>+%</td>
-      <td>+%</td>
+      <td>1,049.79</td>
+      <td>-3.3%</td>
+      <td>+25.2%</td>
     </tr>
   </tbody>
 </table>
@@ -167,7 +109,7 @@ Some alternative candidates...
 
 - **Coinbase announced** it will [do a livestream](https://www.coinbase.com/events) on the company's [official Twitter/X](https://x.com/coinbase) feed Dec. 17, dubbed System Update. Between the lines, it seems likely they will be announcing some new products and/or initiatives. Event starts 2 p.m. Pacific Standard Time
 
-- **The tech user's lifecycle:** The Washington Post reports that some desperate parents now spend [$8,000 per summer](https://wapo.st/3X9Q3mM) on phone-free "detox camps" for their kids, to mitigate the harms of excessive screen time. On the other hand, the Post also just ran a story on the [benefits of tech usage](https://wapo.st/4rd9okx) for preventing age-related "brain rot" among older users. Go figure.
+- **The tech user's lifecycle:** The Washington Post reports that some desperate parents now spend [$8,000 per summer](https://wapo.st/3X9Q3mM) on phone-free "detox camps" for their kids, to mitigate the harms of excessive screen time. On the other hand, the Post also just ran a story about the [benefits of tech usage](https://wapo.st/4rd9okx) for preventing age-related "brain rot" among older users. Go figure.
 
 - **Based on an analysis of Spotify data,** researchers from the University of Southern California say the podcasting industry exhibits gender and racial inequalities far greater than what they saw doing similar work in movies, TV, and music. ([NPR](https://www.npr.org/2025/11/11/nx-s1-5605983/bros-really-are-dominating-podcasting))
 
