Adding hed + subhed, with an assist from Copilot

--- a/2025/2025-11-23-wir.md
+++ b/2025/2025-11-23-wir.md
@@ -1,5 +1,5 @@
-# TKTK
-## TKTK
+# The AI bubble meets a market reckoning
+## From chips to cloud spending, markets are trying to separate durable winners from speculative noise.
 
 ![Child blowing bubbles](https://w3w.news/img/bubbles-andre-hunter-3000.jpg)  
 *Photo by Andre Hunter via [Unsplash](https://unsplash.com/@dre0316)*
